--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -44,7 +48,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			   
 		</plugins>
+		
 	</build>
 
 </project>
