--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/accountmanagementsystem
+spring.datasource.url=jdbc:mysql://localhost:3306/account_management
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
