Transaction transfer service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/account_management
 spring.datasource.username=root
 spring.datasource.password=password
+server.port=9000
