--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/accountmanagementsystem
-spring.datasource.username=root
-spring.datasource.password=root
+spring.mail.host = smtp.gmail.com
+spring.mail.username = acc.management.system@gmail.com
+spring.mail.password = sfnmuaoahslbsggy
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
