--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/account_management
 spring.datasource.username=root
 spring.datasource.password=password
 server.port=9000
+spring.mail.host = smtp.gmail.com
+spring.mail.username = acc.management.system@gmail.com
+spring.mail.password = sfnmuaoahslbsggy
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
