--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/account_management
+spring.datasource.url=jdbc:mysql://localhost:3306/accountmanagementsystem
 spring.datasource.username=root
-spring.datasource.password=password
-server.port=9000
+spring.datasource.password=root
+server.port=8080
 spring.mail.host = smtp.gmail.com
 spring.mail.username = acc.management.system@gmail.com
 spring.mail.password = sfnmuaoahslbsggy
